# ChangeLog for media-video/aegisub
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Apr 2012; Nikoli <nikoli@lavabit.com> -aegisub-2.1.8.ebuild,
  -files/aegisub-2.1.8-do-not-verify-audiolibs.patch,
  -files/aegisub-2.1.8-external-libass.patch, metadata.xml:
  remove old

*aegisub-2.1.9 (10 Jan 2012)

  10 Jan 2012; Nikoli <nikoli@lavabit.com> +aegisub-2.1.9.ebuild,
  aegisub-2.1.9999.ebuild:
  version bump

*aegisub-2.1.9_pre5995 (14 Dec 2011)

  14 Dec 2011; Nikoli <nikoli@lavabit.com> +aegisub-2.1.9_pre5995.ebuild:
  rc1 version bump

*aegisub-2.1.9_pre5585 (03 Sep 2011)

  03 Sep 2011; Nikoli <nikoli@lavabit.com> +aegisub-2.1.9_pre5585.ebuild:
  new snapshot

  03 Sep 2011; Nikoli <nikoli@lavabit.com> aegisub-2.1.9999.ebuild:
  upstream removed internal libass and ffmpegsource

  05 Jul 2011; Nikoli <nikoli@lavabit.com> aegisub-2.1.9_pre5440.ebuild,
  aegisub-2.1.9999.ebuild:
  sync libass dep with patch

*aegisub-2.1.9_pre5440 (04 Jul 2011)

  04 Jul 2011; Nikoli <nikoli@lavabit.com> +aegisub-2.1.9_pre5440.ebuild,
  aegisub-2.1.9999.ebuild, aegisub-3.0_pre4897.ebuild, aegisub-9999.ebuild:
  add snapshot, cosmetics

  03 Jul 2011; Nikoli <nikoli@lavabit.com>
  +files/aegisub-2.1.9-external-libass.patch, aegisub-2.1.9999.ebuild:
  use system libass headers

*aegisub-2.1.9999 (03 Jul 2011)

  03 Jul 2011; Nikoli <nikoli@lavabit.com> +aegisub-2.1.9999.ebuild,
  aegisub-3.0_pre4897.ebuild, aegisub-9999.ebuild:
  add live ebuild for 2.1.x, migrate to EAPI4 and virtual/ffmpeg

*aegisub-9999 (30 Jan 2011)
*aegisub-3.0_pre4897 (30 Jan 2011)
*aegisub-2.1.8 (30 Jan 2011)

  30 Jan 2011; Nikoli <nikoli@lavabit.com> +aegisub-2.1.8.ebuild,
  +files/aegisub-2.1.8-do-not-verify-audiolibs.patch,
  +files/aegisub-2.1.8-external-libass.patch, +aegisub-3.0_pre4897.ebuild,
  +files/aegisub-3.0-Makefile-selected-po.patch,
  +files/aegisub-3.0-pre-Makefile-LDFLAGS.patch,
  +files/aegisub-3.0-pre-external-libass.patch,