@@ -1,14 +1,2 @@
-AUX aegisub-2.1.9-external-libass.patch 2048 RMD160 51a9ce36e2479e672908ffaee5ac0441fcc9bd1a SHA1 4390e81c31e33719e62ed800333ab46ac33b13a6 SHA256 141a27b8e94c2ac088e6983c6252db64b32ed65d538087eb7c62b4a1a46c705a
-AUX aegisub-3.0-Makefile-selected-po.patch 605 RMD160 6683f673da5c54151d3256b0c28f5b6bd449079b SHA1 bc3dd88b6d5d87101cd94812036b3a4b4123bef0 SHA256 1a1ab15c2a878a2e6b84949f5d1a2a7766651f09dec3f5ddd20aa88e6396a082
-AUX aegisub-3.0-pre-Makefile-LDFLAGS.patch 487 RMD160 8f8de937f61b7bf98d1567bb9c5e8be8d757bbf6 SHA1 dcb9c46e92b1b776e526f7fdfa50a0594df55208 SHA256 8b8851185d5c7ab6d920eb59bd7c6b738aec6f4f41e07e32bb7bf9afaf155a62
-AUX aegisub-3.0-pre-external-libass.patch 2018 RMD160 b2d245fa0c90e868c26168ab7ca8031f23fc6335 SHA1 0880f0110cad6e95b3428be28e3ecd772137eb8e SHA256 f69a3d018ba38c152eefc569b6ab023668e9ada94d4d01c3eaf7fb8ddbbfc4c9
-AUX aegisub-3.0-pre-fix-ln-install.patch 447 RMD160 6109c0814f32b09c7877a2c6521a1eb9078d59c9 SHA1 f6182e6a34b7ee4584b30811cfb4f9fd575eac97 SHA256 a8283c05cf20bdffc4108a2495b0a3214394800c8a7d8e7e5b46e493273b7ac2
-AUX aegisub-3.0-pre-include-stdint.h.patch 312 RMD160 2d126da25046079cfbac52488067cf97d3346eda SHA1 990e7d8cd77314bca503a82409d66a966c84f69e SHA256 0e18726d9c348f0d16fdd54e93cadf913fecd8b4043618a3d79a5898a542a5cf
-DIST aegisub-2.1.9.tar.xz 1670496 RMD160 868be6b7a5a9dacc9045c318415445de90234cd0 SHA1 842d2088667d97a16441204d2341b5d58445ffec SHA256 e0591c96183f7713bb14f9d357a2e12bdd3478e4d0a8fad77f14f87a4fc22db7
-DIST aegisub-3.0_pre4897.tar.xz 1743732 RMD160 7ff9c6c8c51673118a6c1a4f8d18506b885ba1f0 SHA1 69854944f57202c2afb3a24edf60ca85f535fe29 SHA256 d4d374e815b907403ad40438f54567e3e05d79e18c175def31107273f1c8e7af
-EBUILD aegisub-2.1.9.ebuild 1319 RMD160 f5a0cc1f8d5d7c9abcda61fcbe0976a6fecbc435 SHA1 46c4e55dabdfbf81aca7b26ad4fd1726964631aa SHA256 d3c9606cad58c7d79cdb2fa4265aa57b51a0b368fde55b18779c2e8e2a806785
-EBUILD aegisub-2.1.9999.ebuild 1391 RMD160 f7a091ed75311f49096853f1e9931545674f7809 SHA1 a3761dbe469897df7b8ba096ff878ab2c69acbb6 SHA256 25bc0c73fd87a42c745848270aec6d7862386271c7ebb39569fd16acedf417af
-EBUILD aegisub-3.0_pre4897.ebuild 2213 RMD160 32cd396bd60a44ddc73d14b09567f3eda5cb424e SHA1 09efbf59b60ca6edc33f96f9ffa2df43c444a9f8 SHA256 74da88964dbd82f667facc7fda5369d43d15784b69e12b229cf3e58a86b3c54f
-EBUILD aegisub-9999.ebuild 1810 RMD160 5bf3e56aae7bb649e37343ed89241b7bab6a896d SHA1 f178b7aac5f03d0ff2dbfa1fc04742d25b133c67 SHA256 280cf9f832b23c840f509434985765505793a1935406a264d82f02c37417e7b9
-MISC ChangeLog 2129 RMD160 e65f617530625835b68699af4e087d9d5e9e5b75 SHA1 cc67558e93f1c56a0e4d2d775cdd9807ee120b25 SHA256 70cda2f3d304b97a2e96d2e8d0a1c6cbbdce00c7025c3a2eb9ed23c6a1a035ec
-MISC metadata.xml 354 RMD160 e39f03db0d5b9fa9d6f37ce3fd8309185132fb16 SHA1 abd84d7e5b846da451e9d9422b5823489df54eb1 SHA256 46abe16d217e143ba8d07abc9a81489947b443a4ef59c44b94523152f767010e
+DIST aegisub-2.1.9.tar.xz 1670496 SHA256 e0591c96183f7713bb14f9d357a2e12bdd3478e4d0a8fad77f14f87a4fc22db7 SHA512 bdb02e3d29db2b7ed165eaf1d541515c15f22199bb209d517089e2c35289b7fc22f6159589004c7f8667a57d26eb7ab6211f9d85ca4bbcd076c5856ac10a3d4f WHIRLPOOL 4ac402e067ff0d863042a8f314c1e55154bacfcc13103772e7c4036b7d927f687b2172003eb51e35469f7af2b640e20f224ff1fa5be83f729eacfaac89c73144
+DIST aegisub-3.0_pre4897.tar.xz 1743732 SHA256 d4d374e815b907403ad40438f54567e3e05d79e18c175def31107273f1c8e7af
