@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Aug 2012; Nikoli <nikoli@lavabit.com> aegisub-2.1.9.ebuild,
+  aegisub-2.1.9999.ebuild, aegisub-3.0_pre4897.ebuild, aegisub-9999.ebuild:
+  migrate to virtual/pkgconfig
+
   13 Apr 2012; Nikoli <nikoli@lavabit.com> -aegisub-2.1.8.ebuild,
   -files/aegisub-2.1.8-do-not-verify-audiolibs.patch,
   -files/aegisub-2.1.8-external-libass.patch, metadata.xml:
